# vanubi

./: .gitignore  .gitmodules  AUTHORS  Build.hs  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  bar.vala  build.sh  configure.ac  default.nix  doc.html  editor.vala  filecompletion.vala  index.html  manual.html  matching.vala  params.json  search.vala  shell.vala  topics.html  vanubi.css  vanubi.vala
agent/: van  vanubi-agent.py  vsh
css/: flask.css  main.css  theme.css
data/: Makefile.am  vanubi.css  vanubi.desktop  vanubi.desktop.in
data/css/: zen.css
data/languages/: asm-intel.lang  commitmsg.lang  dts.lang  generic_comment.lang  i386asm.lang  nix.lang  rpmspec.lang  spec.lang
data/styles/: zen-grep.xml  zen.xml
docs/: Makefile.am  manual.asciidoc  manual.conf
gui/: Makefile.am  aboutbar.vala  bar.vala  buffer.vala  completionbar.vala  editor.vala  filebar.vala  filecompletion.vala  git.vala  grepbar.vala  helpbar.vala  history.vala  indent.vala  keys.vala  layout.vala  main.vala  manager.vala  searchbar.vala  seltree.vala  shell.vala  shellbar.vala  trailingspace.vala  util.vala  vade.vala  vanubi.vala
gui/keybinder/: bind.c  keybinder.h  keybinder.vapi
js/: vares.js
libvanubi/: Makefile.am  buffer.vala  charset.vala  chunked.vala  comment.vala  completion.vala  config.vala  editor.vala  filecluster.vala  filelru.vala  files.vala  git.vala  history.vala  indent.vala  keys.vala  lru.vala  marks.vala  matching.vala  rfs.vala  rfserver.vala  search.vala  source.vala  sourcelru.vala  streams.vala  util.vala  vanubi.deps  vrex.vala
libvanubi/gspawn/: vanubi_gspawn.c
libvanubi/sources/: localfile.vala  remotefile.vala  scratch.vala  stream.vala
libvanubi/state/: errorlocs.vala  layout.vala  state.vala  status.vala  theme.vala
libvanubi/vade/: ast.vala  env.vala  eval.vala  lexer.vala  parser.vala  runtime.vala  scope.vala
src/: Makefile.am  bar.vala  editor.vala  filecompletion.vala  vanubi.vala
styles/: zen.xml
stylesheets/: stylesheet.css
tests/: Makefile.am  dummy.vala  match.vala  testbuffer.vala  testcharset.vala  testchunked.vala  testcomment.vala  testfiles.vala  testhistory.vala  testindent.vala  testmarks.vala  testmatch.vala  testsearch.vala  teststreams.vala  testvade.vala  testvrex.vala
vapi/: icu-i18n.vapi
