desktopdir = $(datadir)/applications
desktop_DATA = vanubi.desktop

cssdir = $(datadir)/vanubi/css
css_DATA = vanubi.css

logodir = $(datadir)/vanubi/logo
logo_DATA = vanubi.png

langdir = $(datadir)/vanubi/languages
lang_DATA = languages/asm-intel.lang languages/i386asm.lang languages/asciidoc.lang

styledir = $(datadir)/vanubi/styles
style_DATA = styles/zen.xml